@@ -13,6 +13,8 @@ import test__vorbis
 import test_flac
 import test_mp3
 import test_oggvorbis
+import test_easyid3
+import test__util
 
 class Result(unittest.TestResult):
 
